tests/paczka1/fuzzy1/55496914.err
Error in line 4: gOmjdlka10 S366 91,6
Error in line 8: RHgP S475 25,7
Error in line 17: S339 S1 03,5
Error in line 18: qSLd S1 1,7
Error in line 28: RHgP S366 65,60
Error in line 31: ISW S475 6,3
Error in line 12: gOmjdlka10 S475 44,0
